Update Fraud Detection in Financial Transactions  (1).ipynb

--- a/Fraud Detection in Financial Transactions  (1).ipynb
+++ b/Fraud Detection in Financial Transactions  (1).ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "credit_card_data = pd.read_csv(r\"C:\\Users\\vishw\\Downloads\\credit_data.csv\\creditcard.csv\")"
+    "credit_card_data = pd.read_csv(r\"data\\creditcard.csv\")"
    ]
   },
   {
